@@ -33,6 +33,7 @@ persistentdir	= @PERSISTENT_DIRECTORY@
 # Programs
 #
 INSTALL		= $(LIBTOOL) --mode=install @INSTALL@
+UNINSTALL	= $(LIBTOOL) --mode=uninstall rm -f
 INSTALL_DATA    = @INSTALL_DATA@
 SED		= @SED@
 LN_S		= @LN_S@
